--- a/tmpl/layout.html
+++ b/tmpl/layout.html
@@ -1,7 +1,7 @@
 {{define "HeadIncludes"}}
 <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Droid+Sans+Mono|Open+Sans:400,700">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap-theme.min.css">
+<!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap-theme.min.css"> -->
 {{end}}
 
 {{define "BodyIncludes"}}
