--- a/tmpl/layout.html
+++ b/tmpl/layout.html
@@ -1,13 +1,14 @@
 {{define "HeadIncludes"}}
 <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Droid+Sans+Mono|Open+Sans:400,700">
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap{{assetInfix}}css">
 <link rel="stylesheet" href="{{sgAssetURL "sourcebox.css"}}">
 <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap-theme.min.css"> -->
 {{end}}
 
 {{define "BodyIncludes"}}
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.pjax/1.9.2/jquery.pjax.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery{{assetInfix}}js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap{{assetInfix}}js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.pjax/1.9.2/jquery.pjax{{assetInfix}}js"></script>
 <script src="{{sgAssetURL "sourcebox.js"}}"></script>
+<script>{{template "JS"}}</script>
 {{end}}
