--- a/tmpl/home.html
+++ b/tmpl/home.html
@@ -13,8 +13,11 @@
     <div class="container">
       <div class="jumbotron">
         <h1 class="brand"><a href="/">xconf.io</a></h1>
+        <p class="powered-by">Dockerfile search engine</p>
         <p class="powered-by">Powered by <a href="https://sourcegraph.com" target="_blank">✱ Sourcegraph</a></p>
       </div>
+
+      {{template "News"}}
 
       <div class="row">
         <div class="col-md-12">
