--- a/tmpl/about.html
+++ b/tmpl/about.html
@@ -8,7 +8,8 @@
       </div>
       <div class="modal-body">
         <p>xconf lets you search open-source Dockerfiles to help you write your own Dockerfiles better and more quickly.</p>
-        <p>It's powered by and created by <a href="https://sourcegraph.com" target="_blank">✱ Sourcegraph</a>.</p>
+        <p>It's powered by and created by <a href="https://sourcegraph.com" target="_blank">✱ Sourcegraph</a>, a collaboration app for dev teams with intelligent code search and analysis.</p>
+        <p>Find us on Twitter <a href="https://twitter.com/srcgraph" target="_blank">@srcgraph</a>. Feedback? Tweet at us or <a href="https://sourcegraph.com/about">email us</a>!</p>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
