--- a/tmpl/news.html
+++ b/tmpl/news.html
@@ -1,7 +1,7 @@
 {{define "News"}}
 <p class="news">
   {{voteLink "_____" "Vote" "main"}}
-  for the file format you want xconf to support next!
+  for the config format you want xconf to support next!
   {{voteLink "#coreos" "CoreOS/Fleet" ""}},
   {{voteLink "#kubernetes" "Kubernetes" ""}},
   {{voteLink "#ansible" "Ansible" ""}},
