--- a/tmpl/layout.html
+++ b/tmpl/layout.html
@@ -1,4 +1,5 @@
 {{define "HeadIncludes"}}
+<link rel="shortcut icon" href="{{sgAssetURL "img/favicon.png"}}">
 <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Droid+Sans+Mono|Open+Sans:400,700">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap{{assetInfix}}css">
 <link rel="stylesheet" href="{{sgAssetURL "sourcebox.css"}}">
