--- a/tmpl/home.html
+++ b/tmpl/home.html
@@ -13,7 +13,7 @@
     <div class="container">
       <div class="jumbotron">
         <h1 class="brand"><a href="/">xconf.io</a></h1>
-        <p class="powered-by">Config search engine</p>
+        <p class="lead">Config search engine</p>
         <p class="powered-by">Powered by <a href="https://sourcegraph.com" target="_blank">✱ Sourcegraph</a></p>
       </div>
 
